working on layout for pages in S viewports, fix spacing, added resp font, adjusted media queries

--- a/app/assets/stylesheets/coupons.scss
+++ b/app/assets/stylesheets/coupons.scss
@@ -61,7 +61,7 @@ font: 40px bold;
 	
 	// font-family: 'Righteous', cursive;
 	font-family: 'Roboto', sans-serif;
-	font-size: 40px;
+	// font-size: 40px;
     color: white;
 
 }
